fix layout issues

--- a/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/judge-waiting-room-2/judge-waiting-room2.component.scss
+++ b/VideoWeb/VideoWeb/ClientApp/src/app/waiting-space/judge-waiting-room-2/judge-waiting-room2.component.scss
@@ -53,3 +53,8 @@
 .no-mass {
   display: none;
 }
+
+.audio-icon {
+  height: 24px;
+  padding-top: 1px;
+}
